added support of defining module

--- a/src/res/view/swform.html
+++ b/src/res/view/swform.html
@@ -5,6 +5,7 @@
 <div><div>@label.vendor@</div>@.ui.field*(vendor,java.lang.Object^@model@)*@</div>
 <div><div>@label.website@</div>@.ui.field*(website,java.lang.Object^@model@)*@</div>
 <div><div>@label.license@</div>@.ui.select*(license,java.lang.Object^@model@)*@</div>
+<div><div>@label.modules@</div>@.ui.select*(modules,java.lang.Object^@model@)*@</div>
 <!--  think of using smart tags, like text(vendor) -->
 
 <div><div>@label.status@</div>@.ui.select*(status,java.lang.Object^@model@)*@</div>
